Add lti config for custom field name and consolidate authn providers

--- a/config/authentication.yml.example
+++ b/config/authentication.yml.example
@@ -4,3 +4,10 @@
   :params:
     :fields:
     - :email
+
+#- :name: Avalon Lti OAuth
+#  :provider: :lti
+#  :hidden: true
+#  :params:
+#    :oauth_credentials:
+#      key: 'secret'
