Added baseline uva role maps.

--- a/config/role_map_development.yml
+++ b/config/role_map_development.yml
@@ -1,6 +1,4 @@
 administrator:
-  - archivist1@example.com
+  - md5wz@virginia.edu
 manager:
-  - archivist1@example.com
-group_manager:
-  - archivist1@example.com
+  - srv3f@virginia.edu
