Added two new units.

--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -2,3 +2,5 @@ units:
   - OLE
   - Special Collections
   - Robertson Media Center
+  - University of Virginia School of Architecture
+  - University of Virginia McIntire Department of Music
