Added z39.50 support to configurations.

--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -4,3 +4,10 @@ units:
   - Robertson Media Center
   - University of Virginia School of Architecture
   - University of Virginia McIntire Department of Music
+
+identifier_types:
+ local: Catalog Key
+ oclc: OCLC
+ lccn: LCCN
+ other: Other
+
