--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -4,6 +4,7 @@ units:
   - Robertson Media Center
   - University of Virginia School of Architecture
   - University of Virginia McIntire Department of Music
+  - Women, Gender, and Sexuality Program
 
 identifier_types:
  local: Catalog Key
