AST-30: added new unit.

--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -5,6 +5,7 @@ units:
   - University of Virginia School of Architecture
   - University of Virginia McIntire Department of Music
   - Women, Gender, and Sexuality Program
+  - University of Virginia Department of Spanish, Italian, and Portuguese
 
 identifier_types:
  local: Catalog Key
