--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -6,6 +6,7 @@ units:
   - University of Virginia McIntire Department of Music
   - Women, Gender, and Sexuality Program
   - University of Virginia Department of Spanish, Italian, and Portuguese
+  - Claude Moore Health Sciences Library, University of Virginia
 
 identifier_types:
  local: Catalog Key
