--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -27,5 +27,46 @@ note_types:
  performers: Performers
  statement of responsibility: Statement of Responsibility
  venue: Venue/Event Date
-
-
+name_types:
+  act: Actor
+  anm: Animator
+  ard: Artistic director
+  arr: Arranger
+  art: Artist
+  aus: Screenwriter
+  aut: Author
+  chr: Choreographer
+  cmp: Composer
+  cnd: Conductor
+  cng: Cinematographer
+  cst: Costume designer
+  dnc: Dancer
+  drt: Director
+  dst: Distributor
+  fds: Film distributor
+  fld: Field director
+  flm: Film editor
+  fmd: Film director
+  fmk: Filmmaker
+  fmp: Film producer
+  itr: Instrumentalist
+  lyr: Lyricist
+  msd: Musical director
+  mus: Musician
+  nrt: Narrator
+  osp: Onscreen presenter
+  pan: Panelist
+  pre: Presenter
+  prf: Performer
+  pro: Producer
+  rce: Recording engineer
+  rcp: Addressee
+  rdd: Radio director
+  rpc: Radio producer
+  sds: Sound designer
+  sgd: Stage director
+  sng: Singer
+  stl: Storyteller
+  vac: Voice actor
+  vdg: Videographer
+  voc: Vocalist
