Collapsed contributor field into the personal names field.

--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -40,6 +40,7 @@ name_types:
   cnd: Conductor
   cng: Cinematographer
   cst: Costume designer
+  ctb: Contributor
   dnc: Dancer
   drt: Director
   dst: Distributor
