Added interviewee role type.

--- a/config/controlled_vocabulary.yml
+++ b/config/controlled_vocabulary.yml
@@ -41,6 +41,7 @@ name_types:
   edt: Editor
   hst: Host
   itr: Instrumentalist
+  ive: Interviewee
   mod: Moderator
   msd: Musical director
   mus: Musician
